# src/modules/authentication/infra/http/controller/index.ts
@@ -3,6 +3,7 @@ import { container } from 'tsyringe';
 
 import { LoginService } from '../../../services/login';
 import { LoginDTO } from '../../../dtos/LoginDTO';
+import { LogoutService } from '../../../services/logout';
 
 export class AuthenticationController {
   async login(request: Request, response: Response) {
@@ -17,5 +18,15 @@ export class AuthenticationController {
     });
 
     return response.json(token);
+  }
+
+  async logout(request: Request, response: Response) {
+    const authHeader = request.headers['authorization'];
+
+    const logoutService = container.resolve(LogoutService);
+
+    await logoutService.execute(authHeader);
+
+    return response.json({ message: 'Logout sucessfully' });
   }
 }
