# src/modules/authentication/infra/http/routes/authentication.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 
 import { AuthenticationController } from '../controller';
+import { isAuth } from '../../../../../shared/infra/http/middlewares/IsAuth';
 
 const AuthenticationRouter = Router();
 const authenticationController = new AuthenticationController();
@@ -27,6 +28,21 @@ AuthenticationRouter.post(
             "name": "Usuario",
             "email": "email@gmail.com",
           }
+        }
+      }
+  */
+);
+
+AuthenticationRouter.post(
+  '/logout',
+  isAuth,
+  authenticationController.logout,
+  /*  #swagger.tags = ['Authentication']
+      #swagger.summary = 'Realiza o logout de um usuário e adiciona seu token na blacklist'
+      }
+      #swagger.responses[200] = {
+        schema: {
+          "message": "Logout sucessfully"
         }
       }
   */
